# omrpr

./: .gitignore  CLAUDE.md  README.md  environment.yml  pyproject.toml
config/: pipeline_config.yaml
containers/: Dockerfile.ros1-noetic  docker-compose.ros1.yml
data/LDV/: manifest.json
docs/: CRITICAL_ANALYSIS_REVISED_20260622.md  DEEP_METHODS_REVIEW.md  OMRPR_SUPERVISOR_GUIDELINE.md  PROJECT_CONTEXT.md  RESULTS_LOG.md  analysis_rules.md  claim_boundary.md  current_ground_truth_audit_2026-06-23.md  e20_outlier_analysis.md  facts.md  pipeline_diagram.md  pipeline_progress.md  previous_facts.md  project_progress.md  walkthrough_log.md
docs/omrpr-paper2-manuscript/: .gitignore
results/: overnight_done.txt  overnight_done2.txt
results/step00/: e0_0rpm_run1_audit.json  e10_120rpm_run1_audit.json  e11_140rpm_run1_audit.json  e12_160rpm_run1_audit.json  e13_180rpm_run1_audit.json  e14_200rpm_run1_audit.json  e15_220rpm_run1_audit.json  e16_240rpm_run1_audit.json  e17_260rpm_run1_audit.json  e18_280rpm_run1_audit.json  e19_300rpm_run1_audit.json  e1_20rpm_run1_audit.json  (+9 more)
src/: comparison_plot_options.py  comparison_plots.py  comparison_plots_v2.py  e20_diagnostic.py  fig_dp_sensitivity.py  fig_ldv_rms_trend.py  free_vib_analysis.py  step00_bag_audit.py  step01_export_frames.py  step02_detect_apriltag.py  step03_quality_score.py  step04_world_transform.py  step05_synchronize.py  step06_fuse_cameras.py  step07_motion_decompose.py  step08_frequency_analysis.py  step09_uncertainty.py  step10_ldv_comparison.py  step11_rts_smoothing.py  step12_figures_tables.py
(+835 files in other folders)
